--- a/package.json
+++ b/package.json
@@ -18,13 +18,15 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
     "react-js-pagination": "^3.0.3",
+    "react-paginate": "^8.2.0",
     "react-redux": "^8.1.1",
     "react-router-dom": "^6.14.2",
     "react-scripts": "5.0.1",
+    "react-toastify": "^9.1.3",
     "redux": "^4.2.1",
     "redux-thunk": "^2.4.2",
     "web-vitals": "^2.1.4",
-    "web3": "^4.0.3"
+    "web3": "^1.10.0"
   },
   "scripts": {
     "start": "react-scripts --openssl-legacy-provider start",
@@ -49,5 +51,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "prettier": "3.0.3"
   }
 }
