--- a/Server/config/config.env
+++ b/Server/config/config.env
@@ -4,6 +4,11 @@ PORT = 5000
 
 MONGO_URI = mongodb+srv://landing:landing1122@cluster0.tian6z7.mongodb.net/
 
+CLIENT_URI = "http://localhost:3000"
+
 JWT_SECRET = lendingAFTBorrowing11Stacking22
 JWT_EXPIRE = 30d
 JWT_COOKIE_EXPIRE = 30
+
+EMAIL_USER="no-reply@satoshiair.xyz"
+EMAIL_PASSWORD="6S#1W45^32!"
