--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-icons": "^4.11.0",
     "react-js-pagination": "^3.0.3",
     "react-paginate": "^8.2.0",
+    "react-phone-number-input": "^3.3.7",
     "react-redux": "^8.1.1",
     "react-router-dom": "^6.14.2",
     "react-scripts": "5.0.1",
