--- a/Server/config/config.env
+++ b/Server/config/config.env
@@ -4,7 +4,7 @@ PORT = 5000
 
 MONGO_URI = mongodb+srv://landing:landing1122@cluster0.tian6z7.mongodb.net/
 
-CLIENT_URI = "http://localhost:3000"
+CLIENT_URI = "https://aft-landing.vercel.app"
 
 JWT_SECRET = lendingAFTBorrowing11Stacking22
 JWT_EXPIRE = 30d
