--- a/Server/package.json
+++ b/Server/package.json
@@ -17,7 +17,8 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.6.1",
     "morgan": "^1.10.0",
-    "nodemailer": "^6.9.6"
+    "nodemailer": "^6.9.6",
+    "web3": "^1.10.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
