--- a/package.json
+++ b/package.json
@@ -3,8 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@coinbase/wallet-sdk": "^3.7.2",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@ledgerhq/hw-app-eth": "^6.34.8",
+    "@ledgerhq/hw-transport-u2f": "^5.36.0-deprecated",
     "@mui/icons-material": "^5.14.1",
     "@mui/joy": "^5.0.0-alpha.88",
     "@mui/material": "^5.14.1",
@@ -12,8 +15,10 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@web3modal/ethers": "^3.4.0",
     "axios": "^1.5.1",
     "bootstrap": "^5.3.0",
+    "ethers": "^6.9.0",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.1",
     "react-bootstrap": "^2.8.0",
